// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionRow/> renders the question row correctly when answer has 0 marks 1`] = `
<tr>
  <td>
    1
  </td>
  <td>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Visit Time in</p>
",
        }
      }
    />
    <br />
  </td>
  <td>
    <div
      className=""
    >
      <textarea
        className="form-control"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "overflow": "hidden",
            "resize": "none",
          }
        }
        value="We were 4; two adults and two kids."
      />
    </div>
  </td>
  <td
    className="text-right"
  >
    <div>
      <div
        className="input-group  "
      >
        <input
          className="form-control text-right"
          onBlur={[Function]}
          onChange={[Function]}
          style={Object {}}
          value={0}
        />
        <span
          className="input-group-addon"
        >
          / 
          0
        </span>
      </div>
    </div>
  </td>
  <td
    className=""
  >
    <button
      className="btn btn-default"
      onClick={[Function]}
    >
      <span
        className="glyphicon glyphicon-unchecked"
      />
    </button>
  </td>
  <td>
    <button
      className="btn btn-warning"
      onClick={[Function]}
      title="Revert message"
    >
      <span
        className="glyphicon glyphicon-pencil"
      />
    </button>
  </td>
</tr>
`;

exports[`<QuestionRow/> renders the question row correctly when answer has non 0 marks 1`] = `
<tr>
  <td>
    1
  </td>
  <td>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Visit Time in</p>
",
        }
      }
    />
    <br />
  </td>
  <td>
    <div
      className=""
    >
      <textarea
        className="form-control"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "overflow": "hidden",
            "resize": "none",
          }
        }
        value="We were 4; two adults and two kids."
      />
    </div>
  </td>
  <td
    className="text-right"
  >
    <div>
      <div
        className="input-group  "
      >
        <input
          className="form-control text-right"
          onBlur={[Function]}
          onChange={[Function]}
          style={Object {}}
          value={1}
        />
        <span
          className="input-group-addon"
        >
          / 
          0
        </span>
      </div>
    </div>
  </td>
  <td
    className=""
  >
    <button
      className="btn btn-default"
      onClick={[Function]}
    >
      <span
        className="glyphicon glyphicon-unchecked"
      />
    </button>
  </td>
  <td>
    <button
      className="btn btn-warning"
      onClick={[Function]}
      title="Revert message"
    >
      <span
        className="glyphicon glyphicon-pencil"
      />
    </button>
  </td>
</tr>
`;
